cmake_minimum_required(VERSION 3.28)
project(c__compilleron_26)

set(CMAKE_CXX_STANDARD 26)

add_executable(c__compilleron_26 main.cpp
        src/tokens/token.cpp
        src/tokens/token.h
        src/tokens/token.h
        src/tokens/token_types.cpp
        src/tokens/token_types.cpp
        src/tokens/check_types.cpp
        src/tokens/check_types.h
        src/tokens/cheker.cpp
        src/tokens/cheker.cpp
        src/err/err.cpp
        src/err/err.h
)
